--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,4 +29,5 @@
     <color name="profile_tasks_bg">#EDE8E8</color>
 
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorUnderlineGrey">#E0E0E0</color>
 </resources>
