--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/profile_userimage"
             android:layout_centerHorizontal="true"
-            android:text="Username"
+            android:text="@string/txt_username_placeholder"
             android:textSize="20dp"
             android:textColor="@color/colorWhite"
             android:fontFamily="@font/roboto"
