--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -33,7 +33,7 @@
         </RelativeLayout>
 
         <TextView
-            android:id="@+id/profile_username"
+            android:id="@+id/profile_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/profile_userimage"
@@ -161,10 +161,10 @@
                     android:fontFamily="@font/roboto"/>
 
                 <TextView
-                    android:id="@+id/profile_useremail"
+                    android:id="@+id/profile_profileemail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/txt_useremail_placeholder"
+                    android:text="@string/txt_profileemail_placeholder"
                     android:textColor="@color/colorDarkLiver"
                     android:textSize="16sp"
                     android:fontFamily="@font/roboto"/>
