--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -20,14 +20,15 @@
             android:layout_marginTop="20dp"
             android:layout_centerHorizontal="true">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_margin="5dp"
                 android:src="@drawable/ic_profile_black_24dp"
                 android:adjustViewBounds="true"
-                android:scaleType="centerInside"
                 android:background="@drawable/circle"
+                app:civ_border_color="@color/colorDarkGray"
+                app:civ_border_width="2dp"
                 />
 
         </RelativeLayout>
