--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -1,54 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditProfileActivity">
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/editProfile_image"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/ic_profile_black_24dp"
-        app:civ_border_color="@color/colorDarkGray"
-        app:civ_border_width="2dp"
-        />
-
-    <TextView
-        android:id="@+id/change_profile_btn"
-        android:layout_below="@+id/editProfile_image"
-        android:text="@string/change_profile_picture"
-        android:layout_centerHorizontal="true"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_marginTop="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
-
+    tools:context=".EditProfileActivity"
+    >
     <RelativeLayout
-        android:layout_below="@id/change_profile_btn"
-        android:orientation="horizontal"
-        android:layout_margin="16dp"
-        android:weightSum="2"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         >
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnSave"
-            android:layout_width="200dp"
+        <RelativeLayout
+            android:id="@+id/profile_userimage2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/save"
-            android:layout_centerInParent="true"
-            android:padding="12dp"
-            app:backgroundTint="@color/colorPrimaryDark"
+            android:background="@drawable/circle_border"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            >
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/editProfile_image"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/ic_profile_black_24dp"
+                app:civ_border_color="@color/colorDarkGray"
+                app:civ_circle_background_color="@color/colorPrimary"
+                app:civ_border_width="2dp"
+                />
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/change_profile_btn"
+            android:layout_below="@+id/profile_userimage2"
+            android:text="@string/custom_name_texthint"
+            android:textColor="@color/colorPrimary"
+            android:fontFamily="@font/luckiest_guy"
+            android:layout_centerHorizontal="true"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_marginTop="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             />
 
+        <!-- inputfield for custom name-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layout_customName"
+            android:layout_below="@id/change_profile_btn"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_centerHorizontal="true"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            >
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/inp_customName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/custom_name_placeholder"
+                android:inputType="textPersonName"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
     </RelativeLayout>
 
 
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_weight="1"
+        android:gravity="center|bottom"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnChangePic"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/change_profile_picture"
+            android:padding="12dp"
+            app:backgroundTint="@color/colorPrimaryDark"
+
+            />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnSave"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/save_information"
+            android:padding="12dp"
+            app:backgroundTint="@color/colorPrimaryDark"
+
+            />
+
+    </LinearLayout>
+
+
+
+</LinearLayout>
