--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -16,7 +16,6 @@
             android:id="@+id/profile_userimage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/circle_border"
             android:layout_marginTop="20dp"
             android:layout_centerHorizontal="true">
 
@@ -26,7 +25,7 @@
                 android:layout_height="100dp"
                 android:layout_margin="5dp"
                 android:src="@drawable/ic_profile_black_24dp"
-                app:civ_border_color="@color/colorDarkGray"
+                app:civ_border_color="@color/colorAccent"
                 app:civ_border_width="2dp"
                 />
 
